	//- [roms]  $946: fixed AI2 (keyboard) behaviour
	- [roms]  $949: fixed timer incrementing/reloading (PPhd: loop freeze)
	- [roms]  $950: can send all of 89?, 92?, 9x? and v2? to all the models
	- [roms]  $951: clean-up in ti68k_scan_images (no more cache, useless now)
	- [roms]  $952: can remove (=file delete) image from list
	- [roms]  $954: fixed size for archived handles on PedRom

- 25/02/2005, version 1.80o: roms
	- fixed bug in ti68k_get_hw_param_block (wrong search/replace)
	- fixed TAB char (0x09) pb in the dbg_mem window (Lionel)
	- handles are now displayed fine with PedRom
	- program entry breakpoint feature now useable with AMS >= 2.00
	- improved dbg windows behaviour: save/restore size, position and 
	state (hide/minimized);	fixed ini file, too
	- updated manpage
	- command line improved and up-to-date
	- cleaned-up configure.ac script (CygWin & MinGW)
	- fixed Step Over
	- added Win32 file selector
	- fixed dependancy problem with tiemu&uae rule in src/Makefile.in
	- fixed bad use of sizeof in hw_io_init
	- fixed MinGW path with Kevin
	- fixed -mms-bitfields issue with UAE Makefile under MinGW (Kevin)
	- fixed out-of-range access with io_bit_tst in ports.c (Kevin)
	- fixed contrast on TI92+
	
- 18/02/2005, version 1.80n: roms
	- fixed FLASH writes with HW3 patch
	- fixed Step Over on the following FLINEs : 0xfff0, 0xfff2, 0xffee.
	- fixed Hardware Parameter Block when converting FLASH upgrade
	- the Windows(tm) MENU key raises the popup menu for now
	- fixed disassemblling of 0xffee and 0xffef FLINEs
	- changed engine_start/stop architecture to remove some menu locks/bugs
	- fix: ROM call combo box: does not jump to call when names contains '/'
	- fix: don't reload ROM calls when changing AMS without chaning calc type
	- show vector name rather than number
	- dis-assemble FLINE with __ld_entry_point
	- dis-assemble FLINE with _bcd_math followed by FPU pseudo-opcode
	- clean-up and improvements in the misc menu (help)